# secret-hitler-sandbox

./: .gitignore  CLAUDE.md  LICENSE  README.md  among_us_papaer.md  play_game.py  play_p3.py  pyproject.toml  secret-hitler-game-rules.md  secret-hitler-sandbox-plan_2.md
agents/: __main__.py  backends.py  claude_code_launcher.py  orchestrator.py
agents/prompts/: liberal.md
docs/: analysis-guide.md  game-28a5d1aad22d-report.md  game-2c0e41a6a9b8-fascist-analysis.md  game-2c0e41a6a9b8-fascist-validation.md  game-2c0e41a6a9b8-liberal-analysis.md  game-2c0e41a6a9b8-liberal-validation.md  game-2c0e41a6a9b8-report.md  game-2c0e41a6a9b8-timeline.md  game-c3192aa3095d-report.md
examples/: game_config.yaml  game_mixed_e2e.yaml
game/: GAME.md  engine.py  policies.py  powers.py  roles.py  terms.py  types.py
game/skins/: __init__.py  base.py  corporate_board.py  secret_hitler.py
orchestration/: ORCHESTRATION.md  __main__.py  backends.py  claude_code_launcher.py  orchestrator.py
prompts/: PROMPTS.md  base_rules.md  fascist.md  hitler.md
server/: SERVER.md  app.py  auth.py  game_logger.py  game_session.py  models.py
tests/: TESTS.md  conftest.py  test_agent_core.py  test_deck.py  test_e2e_claude.py  test_engine.py  test_game_session.py  test_info_hiding.py  test_mcp_tools.py  test_orchestrator.py  test_powers.py  test_server.py  test_skins.py  test_term_limits.py  test_veto.py
