[project]
name = "secret-hitler-sandbox"
version = "0.1.0"
description = "A sandbox for studying deceptive alignment in multi-agent LLM systems"
requires-python = ">=3.11"
license = "CC-BY-NC-SA-4.0"
authors = [
    { name = "Antonio Badilla-Olivas" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["game", "server", "agents"]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end tests requiring Claude Code CLI and API access",
    "opencode: Tests requiring OpenCode CLI",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
